--- a/.github/workflows/create-module-repo.yml
+++ b/.github/workflows/create-module-repo.yml
@@ -29,7 +29,7 @@ jobs:
           GH_TOKEN: ${{ secrets.ORG_BOT_TOKEN }}
         run: |
           curl -X POST \
-            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "Authorization: token $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository_owner }}/module-template/generate \
             -d @- <<EOF
@@ -46,7 +46,7 @@ jobs:
           GH_TOKEN: ${{ secrets.ORG_BOT_TOKEN }}
         run: |
           curl -X PUT \
-            -H "Authorization: Bearer $GH_TOKEN" \
+            -H "Authorization: token $GH_TOKEN" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository_owner }}/${{ steps.parse.outputs.module_name }}/collaborators/${{ steps.parse.outputs.requester }} \
             -d '{"permission":"maintain"}'
