--- a/.github/workflows/create-module-repo.yml
+++ b/.github/workflows/create-module-repo.yml
@@ -25,11 +25,9 @@ jobs:
     
 
       - name: Create repository from template
-        env:
-          GH_TOKEN: ${{ secrets.ORG_BOT_TOKEN }}
         run: |
           curl -X POST \
-            -H "Authorization: token $GH_TOKEN" \
+            -H "Authorization: token ${{ secrets.ORG_BOT_TOKEN }}" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository_owner }}/module-template/generate \
             -d @- <<EOF
@@ -42,11 +40,9 @@ jobs:
           EOF
 
       - name: Add requester as maintainer
-        env:
-          GH_TOKEN: ${{ secrets.ORG_BOT_TOKEN }}
         run: |
           curl -X PUT \
-            -H "Authorization: token $GH_TOKEN" \
+            -H "Authorization: token ${{ secrets.ORG_BOT_TOKEN }}" \
             -H "Accept: application/vnd.github+json" \
             https://api.github.com/repos/${{ github.repository_owner }}/${{ steps.parse.outputs.module_name }}/collaborators/${{ steps.parse.outputs.requester }} \
             -d '{"permission":"maintain"}'
